--- a/src/styles/AboutScreen.css
+++ b/src/styles/AboutScreen.css
@@ -1,3 +1,23 @@
 #aboutContainer {
-    background-color: #fff;
+    height: 50vh;
+}
+
+#aboutButtons li h2 {
+    color: white;
+    font-size: 3vw;
+    position: absolute;
+    margin: 0;
+    top: 3%;
+    left: 0;
+    right: 0;
+}
+
+#aboutButtons li {
+    position: relative;
+}
+
+#aboutButtons li img {
+    max-width: 60%;
+    position: absolute;
+    top: 0;
 }
