--- a/src/styles/SkillsScreen.css
+++ b/src/styles/SkillsScreen.css
@@ -1,3 +1,416 @@
+div {
+    overflow: hidden;
+}
+
 #skillsContainer {
-    background-color: #ccc;
+    padding: 0;
+    margin: 0;
+}
+
+#skillsContainer h1 {
+    text-align: center;
+    font-size: 4vw;
+}
+
+#java {
+    height: 50vh;
+    flex: 1;
+    background-color: transparent;
+    border-right: 1px black solid;
+}
+
+#javascript {
+    height: 50vh;
+    flex: 1;
+    background-color: transparent;
+    border-right: 1px black solid;
+}
+
+#reactjs {
+    height: 50vh;
+    flex: 1;
+    background-color: transparent;
+}
+
+#marketing {
+    flex: 1;
+    background-color: transparent;
+}
+
+#videoEditing {
+    flex: 1;
+    background-color: transparent;
+}
+
+#teaching {
+    flex: 1;
+    background-color: transparent;
+}
+
+#javaContainer {
+    flex: 1;
+    height: 50vh;
+    position: relative;
+}
+
+#javascriptContainer {
+    flex: 1;
+    height: 50vh;
+    position: relative;
+}
+
+#reactjsContainer {
+    flex: 1;
+    height: 50vh;
+    position: relative;
+}
+
+#marketingContainer {
+    flex: 1;
+    height: 50vh;
+    position: relative;
+    background-color: transparent;
+    border-right: 1px black solid;
+}
+
+#videoEditingContainer {
+    flex: 1;
+    height: 50vh;
+    position: relative;
+    border-right: 1px black solid;
+    background-color: transparent;
+}
+
+#teachingContainer {
+    flex: 1;
+    height: 50vh;
+    position: relative;
+    background-color: transparent;
+}
+
+img {
+    position: absolute;
+    margin: auto;
+    max-width: 60%;
+    max-height: 60%;
+    top: 20%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+
+.skills {
+    display: flex;
+    flex-direction: row;
+    height: 60vh;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.skillTitle {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
+.whiteFont {
+    color: white;
+}
+
+ul .skills {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+}
+
+li {
+    display: flex;
+    flex-direction: column;
+
+    transition: all 400ms ease;
+}
+
+li h2 {
+    text-align: center;
+    color: white;
+}
+
+li p {
+    position: absolute;
+    text-align: center;
+    font-size: 1.5vw;
+    top: 25%;
+}
+
+#javaContainer > li p {
+    animation: slideTextLeft 1s ease;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+#javaContainer:hover > li p {
+    animation: slideTextRight 1s ease;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+#javaContainer > li img {
+    animation: slideImgLeft 1.5s ease;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+#javaContainer:hover > li img {
+    animation: slideImgRight 1s ease;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+#javascriptContainer > li p {
+    animation: slideTextLeft 1s ease;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+#javascriptContainer:hover > li p {
+    animation: slideTextRight 1s ease;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+#javascriptContainer > li img {
+    animation: slideImgLeft 1.5s ease;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+#javascriptContainer:hover > li img {
+    animation: slideImgRight 1s ease;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+#reactjsContainer > li p {
+    animation: slideTextLeft 1s ease;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+#reactjsContainer:hover > li p {
+    animation: slideTextRight 1s ease;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+#reactjsContainer > li img {
+    animation: slideImgLeft 1.5s ease;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+#reactjsContainer:hover > li img {
+    animation: slideImgRight 1s ease;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+#marketingContainer > li p {
+    animation: slideTextLeft 1s ease;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+#marketingContainer:hover > li p {
+    animation: slideTextRight 1s ease;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+#marketingContainer > li img {
+    animation: slideImgLeft 1.5s ease;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+#marketingContainer:hover > li img {
+    animation: slideImgRight 1s ease;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+#videoEditingContainer > li p {
+    animation: slideTextLeft 1s ease;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+#videoEditingContainer:hover > li p {
+    animation: slideTextRight 1s ease;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+#videoEditingContainer > li img {
+    animation: slideImgLeft 1.5s ease;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+#videoEditingContainer:hover > li img {
+    animation: slideImgRight 1s ease;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+#teachingContainer > li p {
+    animation: slideTextLeft 1s ease;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+#teachingContainer:hover > li p {
+    animation: slideTextRight 1s ease;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+#teachingContainer > li img {
+    animation: slideImgLeft 1.5s ease;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+#teachingContainer:hover > li img {
+    animation: slideImgRight 1s ease;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+@keyframes slideTextRight {
+    from {
+        margin-left: -200%;
+        left: -250%;
+    }
+    to {
+        margin-left: 0;
+        left: 10%;
+        right: 10%;
+    }
+}
+
+@keyframes slideTextLeft {
+    from {
+        margin-left: 0;
+        left: 10%;
+        right: 10%;
+    }
+    to {
+        margin-left: -200%;
+        left: -250%;
+    }
+}
+
+@keyframes slideImgRight {
+    from {
+        margin-left: 0;
+        left: 20%;
+        right: 20%;
+        /*width: 35vh;*/
+    }
+    to {
+        margin-left: 100%;
+        left: 100%;
+        /*right: -50%;*/
+        /*width: 35vh;*/
+    }
+}
+
+@keyframes slideImgLeft {
+    from {
+        margin-left: 100%;
+        left: 100%;
+        right: -50%;
+        /*width: 35vh;*/
+    }
+    to {
+        margin-left: auto;
+        left: 20%;
+        right: 20%;
+        /*width: 35vh;*/
+    }
 }
